--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-intl-tel-input",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -58,7 +58,7 @@
   "dependencies": {
     "ember-cli-babel": "^5.0.0",
     "ember-cli-htmlbars": "^0.7.9",
-    "ember-cli-sass": "dukex/ember-cli-sass#bugfix/addon-styles"
+    "ember-cli-sass": "justin-lau/ember-cli-sass#bugfix/addon-styles"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
