--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-google-analytics": "1.3.2",
+    "ember-cli-google-analytics": "^1.4.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
