--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-intl-tel-input",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -39,7 +39,7 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-prism": "brandonjmckay/ember-prism#ce27762",
+    "ember-prism": "0.0.5",
     "ember-try": "0.0.6"
   },
   "keywords": [
