--- a/package.json
+++ b/package.json
@@ -25,20 +25,23 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
-    "ember-cli-app-version": "0.3.3",
+    "ember-cli": "1.13.5",
+    "ember-cli-app-version": "0.4.0",
     "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-google-analytics": "^1.4.0",
-    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
+    "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
+    "ember-cli-qunit": "0.3.18",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.1",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
+    "ember-data": "1.13.7",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
+    "ember-export-application-global": "^1.0.3",
     "ember-prism": "0.0.5",
     "ember-try": "0.0.6"
   },
@@ -58,7 +61,7 @@
   "dependencies": {
     "ember-cli-babel": "^5.0.0",
     "ember-cli-htmlbars": "^0.7.9",
-    "ember-cli-sass": "justin-lau/ember-cli-sass#bugfix/addon-styles"
+    "ember-cli-sass": "dukex/ember-cli-sass#bugfix/addon-styles"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
