--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,16 @@
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.0.0-beta.18",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
-    "ember-qunit": "0.3.3",
+    "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.15",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
+    "qunit": "~1.18.0",
     "intl-tel-input": "~6.0.3",
     "bootstrap-sass": "~3.3.5",
-    "prism": "~1.0.0"
+    "prism": "~1.0.0",
+    "sinon": "~1.17.2",
+    "sinonjs": "~1.17.1"
   }
 }
