--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "ember-cli-google-analytics": "^1.4.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
+    "ember-cli-qunit": "^1.0.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-prism": "0.0.5",
-    "ember-try": "0.0.6"
+    "ember-sinon": "^0.3.0",
+    "ember-try": "0.0.6",
+    "sinon": "^1.17.2"
   },
   "keywords": [
     "ember-addon",
