--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "qunit": "~1.17.1",
     "intl-tel-input": "~6.0.3",
     "bootstrap-sass": "~3.3.5",
-    "prism": "~1.0.0"
+    "prism": "~1.0.0",
+    "sinon": "~1.17.2",
+    "sinonjs": "~1.17.1"
   }
 }
