--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-prism": "0.0.5",
-    "ember-try": "0.0.6"
+    "ember-sinon": "^0.3.0",
+    "ember-try": "0.0.6",
+    "sinon": "^1.17.2"
   },
   "keywords": [
     "ember-addon",
