--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -21,9 +21,7 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName",
-    "sinon",
-    "jQuery"
+    "currentRouteName"
   ],
   "node": false,
   "browser": false,
