--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
+    "ember-cli": "1.13.13",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-content-security-policy": "0.4.0",
@@ -35,7 +35,7 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
+    "ember-data": "1.13.15",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
@@ -60,7 +60,7 @@
   "dependencies": {
     "ember-cli-babel": "^5.0.0",
     "ember-cli-htmlbars": "^0.7.9",
-    "ember-cli-sass": "justin-lau/ember-cli-sass#bugfix/addon-styles"
+    "ember-cli-sass": "^5.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
