--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,10 @@
     "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.1",
+    "jquery": "2.1.0",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.18.0",
-    "intl-tel-input": "~6.0.3",
+    "intl-tel-input": "~7.1.1",
     "bootstrap-sass": "~3.3.5",
     "prism": "~1.0.0",
     "sinon": "~1.17.2",
